--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 h1 {
   font-weight: 800;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 li a {
   color: black;
   font-weight: bold;
+  padding: 10px;
+}
+li {
+  margin: 15px;
+  font-size: 20px;
 }
